tests/neg/parser_static_function_unsupported.baa
// EXPECT: لا يمكن تعريف الدوال بوسم 'ثابت' أو 'ساكن'

ساكن صحيح دالة_ساكنة() {
    إرجع ٠.
}

صحيح الرئيسية() {
    إرجع دالة_ساكنة().
}
